--- a/template/index.htm
+++ b/template/index.htm
@@ -205,7 +205,7 @@ data-fadespeed = "10" >
     <h3 id="blocks">Thematic Blocks</h3>
     <p>High-order conceptual ideas are discussed in the plain text.  
     </p><p> Lists of steps are included in blue boxes, indented with a blue heading. and dark blue text. </p>
-       <div class="procedure">
+       <div class="feature procedure">
         <h3>A Procedure</h3>
          <p>A div with <b>class="procedure"</b> has a heading, a short introduction, then a list of numbered steps</p>
          <ol>
@@ -217,7 +217,7 @@ data-fadespeed = "10" >
     <h3>More Text</h3>
     <p>Then as things roll along, there is usually more conceptual description.  But before long, there might be a need for a sort of sidebar discussion.   These are topics that may be a zoom-in or a zoom-out.  These may be ideas that get linked to from other documents. These sidebars get a gold box but with the same bluish text.
     </p>
-    <div id="funfact" class="funfact">
+    <div id="funfact" class="feature funfact">
       <h3>A Fun Fact</h3>
       <p>A div of <b>class="funfact"</b> starts out with an &lt;H3&gt; and then has some text explaining a sort of meta-topic that pertains to the ideas that surround it.  
       <p>The topic might zoom in or zoom out relative to the context.
