--- a/template/indexbk.htm
+++ b/template/indexbk.htm
@@ -211,7 +211,7 @@ data-fadespeed = "10" >
     <h3 id="blocks">Thematic Blocks</h3>
     <p>High-order conceptual ideas are discussed in the plain text.  
     </p><p> Lists of steps are included in blue boxes, indented with a blue heading. and dark blue text. </p>
-       <div class="procedure">
+       <div class="feature procedure">
         <h3>A Procedure</h3>
          <p>A procedure has a heading, a short introduction, then a list of numbered steps</p>
          <ol>
