modified:   model_management/images/filesystem_context.jpg 	new file:   model_management/images/lifecycle_close.jpg 	new file:   model_management/images/lifecycle_init.jpg 	new file:   model_management/images/lifecycle_stage.jpg 	new file:   model_management/images/lifecycle_workflow.jpg 	modified:   model_management/images/model_mgt_files.jpg 	modified:   model_management/index.htm 	modified:   resources/cityschema.css 	modified:   resources/slideshow_pbc.css 	modified:   template/index.htm

--- a/resources/cityschema.css
+++ b/resources/cityschema.css
@@ -264,6 +264,8 @@ img.title {
   margin: 0.5em;
   margin-right: 2em;
   padding: 0em 0.5em 0.5em 0.5em;
+  overflow:auto;
+  clear: both;
 }
 
 .feature h3{
