--- a/resources/slideshow_pbc.css
+++ b/resources/slideshow_pbc.css
@@ -106,7 +106,7 @@ body {
 }
 
 .navleft  {
-  width: 40%;
+  width: 50%;
   display:flex;
   flex-direction:row;
 }
@@ -114,7 +114,8 @@ body {
 select.slidepicker  {
   border: none;
   height: 23px;
-  font-size: 17px;
+  font-size: 15px;
+  font-weight:700;
   width: 100%;
   /*width: 300px;*/
   cursor: pointer;
@@ -125,7 +126,7 @@ select.slidepicker  {
 
 .readmore {
   flex-grow: 2;
-  width: 50%;
+  width: 30%;
   text-align: center;
   margin:auto;
   /*flex-grow: 1;*/
@@ -153,7 +154,6 @@ select.slidepicker  {
   text-align: right;
   justify-content: space-between;
 }
-
 
 .caption  {
   padding: 0px 6px 6px 6px; 
