--- a/template/index.htm
+++ b/template/index.htm
@@ -62,15 +62,14 @@
 
 <h3 id="slideshow_element">Slideshows</h3>
 <p>The script, <b>slideshow_pbc.js</b> looks for any div with <b>class="slideshow:</b> and turns it into a slideshow with lots of features as you can see, above.  Ther slideshow div has to contain subdivisions that are <b>class="slideshow_container"</b> with more subdivisions as shown below:</p>
-
-
+<p>The value for <b>daya-playpaused</b> should be either <b>"playing"</b> or <b>"paused"</b>.  
 
 <pre>
   &lt;!-- Slideshow container --&gt;
   &lt;div id="moreslides" class="slideshow in-page" 
   data-imgheight = "250px" 
   data-title = "" 
-  data-playpaused = "paused"
+  data-playpaused = "paused" &gt;
   &lt;div class="slidecontainer" data-title="Wide Image" data-caption="Away up to tree-line."&gt;
   &lt;div class="slide"&gt;&lt;img src="./images/wide.jpg" &gt;&lt;/div&gt;
   &lt;div class="caption"&gt;&lt;p&gt;Now is the time for all good men to come to the Wide Image.  
@@ -97,7 +96,7 @@
 <div id="moreslides" class="slideshow in-page" 
 data-imgheight = "250px" 
 data-title = "" 
-data-playpaused = "paused"
+data-playpaused = "paused" 
 data-fadespeed = "10" >
 
 <div class="slidecontainer" data-title="Wide Image" data-caption="Away up to tree-line.">
@@ -112,11 +111,11 @@ data-fadespeed = "10" >
 
 <div class="slidecontainer" data-title="Tall Image" >
 <div class="slide"> <img src="./images/tall.jpg"></div>
-<div class="caption"><p>That image is mightty tall, but maxes out at 1005 .</p></div>
+<div class="caption"><p>That image is mighty tall, but maxes out at 1005 .</p></div>
 <div class="learnmore"><a href='#funfact'>Learn More about Tall Images</a></div>
 </div>
 
-</div> <!-- Closes ooslideshow-->
+</div> <!-- Closes moreslides-->
 
 <hr>
 
@@ -202,12 +201,13 @@ data-fadespeed = "10" >
     <li><b>target="outboard"</b>: Link to a reference page outside of citySchema.org.
   </ul>
 
-    <h3 id="blocks">Thematic Blocks</h3>
+    <h3 id="blocks">Feature Blocks</h3>
     <p>High-order conceptual ideas are discussed in the plain text.  
-    </p><p> Lists of steps are included in blue boxes, indented with a blue heading. and dark blue text. </p>
+    <p>Feature blocks help to break out other sorts of ideas.  
+
        <div class="feature procedure">
         <h3>A Procedure</h3>
-         <p>A div with <b>class="procedure"</b> has a heading, a short introduction, then a list of numbered steps</p>
+         <p>A div with <b>class="feature procedure"</b> has a heading, a short introduction, then a list of numbered steps</p>
          <ol>
            <li>First you do <b>Step One</b>.
            <li>Then you do <b>Step Two</b>.
@@ -215,15 +215,27 @@ data-fadespeed = "10" >
          <p>Then there might be a short statement of the ending condition.
        </div> <!--closes procedure -->
     <h3>More Text</h3>
-    <p>Then as things roll along, there is usually more conceptual description.  But before long, there might be a need for a sort of sidebar discussion.   These are topics that may be a zoom-in or a zoom-out.  These may be ideas that get linked to from other documents. These sidebars get a gold box but with the same bluish text.
+    <p>Then as things roll along, there is usually more conceptual description.  But before long, there might be a need for another sort of sidebar discussion.   These are topics that may be a zoom-in or a zoom-out.  These may be ideas that get linked to from other documents. These sidebars get a gold box but with the same bluish text.
     </p>
     <div id="funfact" class="feature funfact">
       <h3>A Fun Fact</h3>
-      <p>A div of <b>class="funfact"</b> starts out with an &lt;H3&gt; and then has some text explaining a sort of meta-topic that pertains to the ideas that surround it.  
-      <p>The topic might zoom in or zoom out relative to the context.
-      <p>this is the sort of thing that is likely tobe referred to from soe other page.       
+      <p>A div of <b>class="feature funfact"</b> starts out with an &lt;H3&gt; and then has some text explaining a sort of meta-topic that pertains to the ideas that surround it.  It may summarize issues discossed in more detail on another page. 
+      <p>The topic might zoom in or zoom out relative to the context.      
     </div> <!-- closes sidebar -->
    <p>Typically, the page would have some more text that closes up the big idea.  Maybe providing pointers about were else to go. 
+    <div id="tour" class="feature tour">
+    <h3>A Tour</h3>
+    <figure class="right">
+      <img src="images/tall.jpg">
+      <figcaption>Fig Right</figcaption>
+    </figure>
+
+    <p>A div of <b>class="feature tour"</b> provides a tour of the file-system or tool-box. 
+    <p>Notice the use of the <b>class="figure right"</b> in this box.  
+    <p>the html for the figure comes after the heading. 
+     
+    </div> <!-- closes sidebar -->
+
 
   </div> <!-- Closes #article div -->
   <div id="footer"> <!-- Content provided by cityschema_includes.js--> </div> 
