--- a/template/index.htm
+++ b/template/index.htm
@@ -198,6 +198,7 @@ data-fadespeed = "10" >
   <li><b>target="download"</b>: The tiled download page from the repo/catalog.
   <li><b>target="index"</b>: Documentation Index page from the repo/catalog.
   <li><b>target="arcdoc"</b>: link to software documentation.
+  <li><b>target="github"</b>: link to a location in github.
     <li><b>target="outboard"</b>: Link to a reference page outside of citySchema.org.
   </ul>
 
