--- a/resources/cityschema.css
+++ b/resources/cityschema.css
@@ -192,7 +192,7 @@ margin: 0;
 }
 
 /* Tablet:768px. */
-@media (min-width: 768px) and (max-width: 991px) {
+@media (max-width: 991px) {
   .title {
     font-size: 24px; 
    }
