deleted:    home/images/config_gdb.jpg 	new file:   model_management/images/import_tasks.jpg 	new file:   model_management/images/import_tools.jpg 	new file:   model_management/images/model_work.jpg 	modified:   model_management/index.htm 	modified:   resources/cityschema.css

--- a/resources/cityschema.css
+++ b/resources/cityschema.css
@@ -57,6 +57,7 @@
     color: linen;}
   #index { grid-area: index; 
        overflow: auto;
+       scrollbar-width: thin;
        overflow-wrap: normal; 
        padding: 10px 0px 10px 10px;}
   #article { grid-area: article; 
