--- a/resources/cityschema.css
+++ b/resources/cityschema.css
@@ -197,7 +197,8 @@ margin: 0;
 /* Tablet:768px. */
 @media (max-width: 991px) {
   .title {
-    font-size: 24px; 
+    font-size: 24px; /* A wee smaller -- seems to be necessary to keep 
+                     header text from rupturing on my samsung 9" tablet. */
    }
  }
 
@@ -270,15 +271,18 @@ img.title {
   display: block;
   width: 95%;
   margin-left: auto;
-  /*margin-right: auto;
-  margin-top: 35px;
+  margin-right: auto;
+  /*margin-top: 35px;
   margin-bottom: 35px; */
   color: #333399;
   background-color: #90d7f8;
   border: 1px solid #1f7ebd;
   /*padding: 0px 10px 10px 10px;*/
-  margin: 0.5em;
-  margin-right: 2em;
+  /*margin-left: 0.75em;
+  margin-right: 2em; */
+  margin-top: 25px;
+  margin-bottom: 20px;
+
   padding: 0em 0.5em 0.5em 0.5em;
   overflow:auto;
   clear: both;
