--- a/template/index.htm
+++ b/template/index.htm
@@ -38,7 +38,9 @@
   <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">Documentation Template & Style Guide</h1>
-    <p>This page serves as a template for new resources in the documentation collection.  It contains all of the necessarry included files and demonstrates the components that are accommodated by the <b><a href="../resources/cityschema.css">cityschema.css</a></b></p>
+  <p>Documentation is a critical part of the city-wide 3d model architecture.  Users that download modules for their own use will probably also want to fork the documentation related to the components because the on-line documentation at citySchema.org is going to evolve and become out of sync with static local versions.  Furthermore, users who make their own improvements and customizations to the architecture and tools will want to modify the documentation.  
+  </p><p>
+  The documentation that you are looking at now is designed to be simple and to be completely functional when rendered from a plain file-system without the mediation of a web server. It is based on html, css and javascript.  This page describes and demonstrates the basic elements that are accommodated by the <b><a href="../resources/cityschema.css">cityschema.css</a></b></p>
 
  <!-- Slideshow container -->
     <div id="ooslides" class="slideshow in-page" 
