deleted:    Xmodel_mgt/images/tall.jpg 	deleted:    Xmodel_mgt/images/wide.jpg 	deleted:    Xmodel_mgt/index.htm 	new file:   filesystem/images/dev_folder.jpg 	new file:   filesystem/images/filesystem_context.jpg 	new file:   filesystem/images/model_mgt_files.jpg 	new file:   filesystem/index.htm 	modified:   model_management/index.htm 	modified:   resources/cityschema.css 	modified:   resources/cityschema_includes.js 	modified:   template/index.htm

--- a/template/index.htm
+++ b/template/index.htm
@@ -237,7 +237,7 @@ data-fadespeed = "10" >
     <p>Notice the use of the <b>class="figure right"</b> in this box.  
     <p>the html for the figure comes after the heading. 
      
-    </div> <!-- closes sidebar -->
+    </div> <!-- closes feature -->
 
 
   </div> <!-- Closes #article div -->
