--- a/resources/cityschema.css
+++ b/resources/cityschema.css
@@ -250,7 +250,10 @@ figure.middle {
   margin-left: 30px;
   margin-right: 25px;
   padding: 0.5em;
-  background-color: rgb(245, 242, 239);
+  background-color: #EDE9E1;
+  display: flex; 
+  flex-direction: column;
+
 }
 
 img.scaled {
@@ -259,8 +262,13 @@ img.scaled {
 }  /* I think that this is not necessary any more. */
 
 figure > img {
-  width: 100%; 
+  /*width: 100%; */
   height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  object-fit: contain;
 }
 
 img.triptic {
