new file:   home/images/tall.jpg 	modified:   home/index.htm 	modified:   model_management/index.htm 	modified:   resources/cityschema.css 	modified:   resources/cityschema_includes.js 	deleted:    resources/includes.js 	new file:   stewardship/images/tall.jpg 	new file:   stewardship/images/wide.jpg 	new file:   stewardship/index.htm 	modified:   submissions/index.htm

--- a/resources/cityschema.css
+++ b/resources/cityschema.css
@@ -48,6 +48,7 @@
   border-right-color: rgb(28, 87, 121);
   border-right-width: 1px;
   font-family: 'Roboto Condensed', sans-serif;
+
 }
 
 
@@ -59,7 +60,8 @@
        overflow: auto;
        scrollbar-width: thin;
        overflow-wrap: normal; 
-       padding: 10px 0px 10px 10px;}
+       padding: 10px 0px 10px 10px;
+  }
   #article { grid-area: article; 
        /*background-color: green;*/
        padding: 10px 35px 10px 25px;}
