modified:   citytiler/index.htm 	modified:   data_dictionary/index.htm 	new file:   docutree/images/tall.jpg 	new file:   docutree/images/wide.jpg 	new file:   docutree/index.htm 	modified:   filesystem/index.htm 	modified:   home/index.htm 	modified:   mmgt_compile/index.htm 	modified:   mmgt_edit/index.htm 	modified:   mmgt_import/index.htm 	modified:   mmgt_init/index.htm 	modified:   mmgt_layers/index.htm 	modified:   mmgt_orig/index.htm 	modified:   mmgt_project/index.htm 	modified:   mmgt_stage/index.htm 	modified:   mmgt_tools/index.htm 	modified:   model_buyers_guide/index.htm 	modified:   model_collection/index.htm 	modified:   model_collection/index.htmx 	modified:   oais/index.htm 	modified:   repocat/index.htm 	modified:   resources/cityschema_includes.js 	deleted:    resources/cityschema_old.css 	new file:   resources/docutree.css 	new file:   resources/docutree.js 	new file:   resources/docutree_includes.js 	modified:   stewardship/index.htm 	modified:   submissions/index.htm 	modified:   submissions/index_bk.htm 	modified:   template/index.htm 	modified:   template/indexbk.htm 	modified:   tile_scheme/index.htm 	modified:   whatsnew/index.htm

--- a/template/index.htm
+++ b/template/index.htm
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="../resources/images/favicon.png" type="image/x-icon">
     <script src="../resources/jquery/jquery-3.6.0.min.js"></script>
-    <link href="../resources/cityschema.css" rel="stylesheet"> 
+    <link href="../resources/docutree.css" rel="stylesheet"> 
     <script src="../resources/slideshow_pbc.js"></script>
     <link href="../resources/slideshow_pbc.css" rel="stylesheet"> 
     
@@ -22,7 +22,7 @@
           When you add a new page or internalachcor, you should update the index in cityschema_includes.js.-->
     <script src="../resources/cityschema_includes.js"></script>
     <!-- THis has to come after the cityschema_includes file-->
-    <script src="../resources/cityschema.js"></script>
+    <script src="../resources/docutree.js"></script>
     </head>
     <body>
       <div id="grid-container">
@@ -40,7 +40,7 @@
   <h1 class="title">Documentation Template & Style Guide</h1>
   <p>Documentation is a critical part of the city-wide 3d model architecture.  Users that download modules for their own use will probably also want to fork the documentation related to the components because the on-line documentation at citySchema.org is going to evolve and become out of sync with static local versions.  Furthermore, users who make their own improvements and customizations to the architecture and tools will want to modify the documentation.  
   </p><p>
-  The documentation that you are looking at now is designed to be simple and to be completely functional when rendered from a plain file-system without the mediation of a web server. It is based on html, css and javascript.  This page describes and demonstrates the basic elements that are accommodated by the <b><a href="../resources/cityschema.css">cityschema.css</a></b></p>
+  The documentation that you are looking at now is designed to be simple and to be completely functional when rendered from a plain file-system without the mediation of a web server. It is based on html, css and javascript.  This page describes and demonstrates the basic elements that are accommodated by the <b><a href="../resources/docutree.css">docutree.css</a></b></p>
 
  <!-- Slideshow container -->
     <div id="ooslides" class="slideshow in-page" 
@@ -132,7 +132,7 @@ data-fadespeed = "10" >
       </figure>
 
       <h3 id="figures">Figures: Left, Right and Middle</h3>
-       <p>The cityschema.css has three types of figures.  The one on the right uses the following
+       <p>The docutree.css has three types of figures.  The one on the right uses the following
          html:
   <!-- notice: the indent of <pre> text is expressed by actual whitespace. -->
   <pre>
