--- a/template/indexbk.htm
+++ b/template/indexbk.htm
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="../resources/images/favicon.png" type="image/x-icon">
     <script src="../resources/jquery/jquery-3.6.0.min.js"></script>
-    <link href="../resources/cityschema.css" rel="stylesheet"> 
+    <link href="../resources/docutree.css" rel="stylesheet"> 
     <script src="../resources/slideshow_pbc.js"></script>
     <link href="../resources/slideshow_pbc.css" rel="stylesheet"> 
     
@@ -22,7 +22,7 @@
           When you add a new page or internalachcor, you should update the index in cityschema_includes.js.-->
     <script src="../resources/cityschema_includes.js"></script>
     <!-- THis has to come after the cityschema_includes file-->
-    <script src="../resources/cityschema.js"></script>
+    <script src="../resources/docutree.js"></script>
     </head>
     <body>
       <div id="grid-container">
@@ -38,7 +38,7 @@
   <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">Documentation Template & Style Guide</h1>
-    <p>This page serves as a template for new resources in the documentation collection.  It contains all of the necessarry included files and demonstrates the components that are accommodated by the <b><a href="../resources/cityschema.css">cityschema.css</a></b></p>
+    <p>This page serves as a template for new resources in the documentation collection.  It contains all of the necessarry included files and demonstrates the components that are accommodated by the <b><a href="../resources/docutree.css">docutree.css</a></b></p>
 
 
     <!-- Slideshow container -->
@@ -137,7 +137,7 @@ data-fadespeed = "10" >
       </figure>
 
       <h3 id="figures">Figures: Left, Right and Middle</h3>
-       <p>The cityschema.css has three types of figures.  The one on the right uses the following
+       <p>The docutree.css has three types of figures.  The one on the right uses the following
          html:
   <!-- notice: the indent of <pre> text is expressed by actual whitespace. -->
   <pre>
