new file:   citytiler/images/citytiler_toolbox.png 	modified:   citytiler/index.htm 	modified:   resources/cityschema.css 	modified:   resources/docutree.css

--- a/resources/cityschema.css
+++ b/resources/cityschema.css
@@ -471,7 +471,8 @@ font-weight: 100;
 }
 
 .treeview li.active {
-  background-color: #94cdf3;
+  /*background-color: #94cdf3;*/
+  background-color: white;
   font-weight: 550;
 
 }
