--- a/resources/docutree.css
+++ b/resources/docutree.css
@@ -509,7 +509,7 @@ font-weight: 100;
 }
 
 .treeview li.active {
-  background-color: #94cdf3;
+  background-color: white;
   font-weight: 550;
 
 }
